@startuml
title AI-Based Customer Support Automation System - ERD Diagrams

' ======================
' USER TABLE
' ======================
class User {
  +PK user_id : BIGINT
  +name : VARCHAR
  +email : VARCHAR
  +password_hash : VARCHAR
  +role : VARCHAR        ' CLIENT / AGENT / ADMIN
  +status : VARCHAR      ' ACTIVE / INACTIVE
  +created_at : TIMESTAMP
}

' ======================
' TICKET TABLE
' ======================
class Ticket {
  +PK ticket_id : BIGINT
  +FK customer_id : BIGINT          ' -> User.user_id
  +FK assigned_agent_id : BIGINT    ' -> User.user_id (nullable)
  +category : VARCHAR
  +priority : VARCHAR
  +status : VARCHAR
  +sentiment_score : DOUBLE
  +ai_confidence_score : DOUBLE
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
}

' ======================
' MESSAGE TABLE
' ======================
class Message {
  +PK message_id : BIGINT
  +FK ticket_id : BIGINT            ' -> Ticket.ticket_id
  +FK sender_user_id : BIGINT       ' -> User.user_id (nullable for AI)
  +sender_type : VARCHAR
  +content : TEXT
  +sentiment_score : DOUBLE
  +timestamp : TIMESTAMP
}

' ======================
' KNOWLEDGE BASE TABLE
' ======================
class KnowledgeBaseEntry {
  +PK kb_id : BIGINT
  +question_pattern : VARCHAR
  +answer_template : TEXT
  +category : VARCHAR
  +FK last_updated_by : BIGINT      ' -> User.user_id
  +last_updated_at : TIMESTAMP
}

' ======================
' SYSTEM LOG TABLE
' ======================
class SystemLog {
  +PK log_id : BIGINT
  +event_type : VARCHAR
  +description : TEXT
  +FK user_id : BIGINT              ' -> User.user_id
  +FK ticket_id : BIGINT            ' -> Ticket.ticket_id (nullable)
  +timestamp : TIMESTAMP
}

' ======================
' NEW: NOTIFICATION TABLE
' ======================
class Notification {
  +PK notification_id : BIGINT
  +FK user_id : BIGINT              ' -> User.user_id (agent or client)
  +FK ticket_id : BIGINT            ' -> Ticket.ticket_id
  +message : VARCHAR
  +is_read : BOOLEAN                ' true/false
  +created_at : TIMESTAMP
}

' ======================
' RELATIONSHIPS
' ======================

' User creates tickets
User "1" -- "0..*" Ticket : customer >

' User assigned to tickets
User "1" -- "0..*" Ticket : assigned_agent >

' Ticket has messages
Ticket "1" -- "0..*" Message : messages >

' User sends messages
User "1" -- "0..*" Message : sends >

' User maintains KB
User "1" -- "0..*" KnowledgeBaseEntry : updates >

' User logs events
User "1" -- "0..*" SystemLog : logs >

' Ticket logs events
Ticket "1" -- "0..*" SystemLog : related_logs >

' NEW: User receives notifications
User "1" -- "0..*" Notification : receives >

' NEW: Ticket generates notifications
Ticket "1" -- "0..*" Notification : notifies >

@enduml
